# camplayer

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/zhenshi/capture/: HiltTestRunner.kt  MainActivityUiTest.kt
app/src/androidTest/java/com/zhenshi/capture/media/: SourceKeysInstrumentedTest.kt
app/src/androidTest/java/com/zhenshi/capture/screens/: TabScreenLayoutUiTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  uac_jni.cpp
app/src/main/java/com/zhenshi/capture/: CaptureApp.kt  MainActivity.kt
app/src/main/java/com/zhenshi/capture/data/: PushTarget.kt  PushTargetStore.kt  SourceHistoryLru.kt  SourceHistoryStore.kt
app/src/main/java/com/zhenshi/capture/di/: AppModule.kt
app/src/main/java/com/zhenshi/capture/media/: DefaultPlaybackSession.kt  Models.kt  PlaybackSession.kt  SourceKeys.kt
app/src/main/java/com/zhenshi/capture/navigation/: AppNavigationRequests.kt
app/src/main/java/com/zhenshi/capture/screens/: AppNav.kt  NavigationExt.kt
app/src/main/java/com/zhenshi/capture/util/: AppRuntimePermissions.kt  LatencySampler.kt  SignalSourceLabels.kt  SystemBars.kt  UsbDeviceExt.kt  UsbRuntimePermissions.kt  (+1 more)
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: device_filter.xml  network_security_config.xml
gradle/: libs.versions.toml
(+45 files in other folders)
